v3.7.6 (XXXX-XX-XX)
-------------------

* Fix AQL cost estimate of spliced subqueries which could lead to overly large
  numbers in the explain output of such queries.

* Add an AQL query kill check during early pruning. Fixes issue #13141.

* Fix Windows directory creation error handling.

* Added new metrics for tracking AQL queries and slow queries:
  * `arangodb_aql_query_time`: histogram with AQL query times distribution.
  * `arangodb_aql_slow_query_time`: histogram with AQL slow query times
    distribution.

* Reduce the number of dropped followers when running larger (>= 128 MB) write
  transactions.

* Remove a case in which followers were dropped unnecessarily in streaming
  transactions that replicated to the same follower.

* Added metrics for collection locks:
  - `arangodb_collection_lock_timeouts_exclusive`: Number of lock timeouts when
    trying to acquire collection exclusive locks
  - `arangodb_collection_lock_timeouts_write`: Number of lock timeouts when
    trying to acquire collection write locks
  - `arangodb_collection_lock_acquisition_micros`: Total amount of collection
    lock acquisition time [μs]
  - `arangodb_collection_lock_acquisition_time`: Total collection lock
    acquisition time histogram [s]

* Reduce lock timeout on followers to 15 seconds.
  Rationale: we should not have any locking conflicts on followers, generally.
  Any shard locking should be performed on leaders first, which will then,
  eventually replicate changes to followers. replication to followers is only
  done once the locks have been acquired on the leader(s).

* Better tracking of memory used in AQL graph traversals, COLLECT and SORT
  operations. From this version onwards, certain AQL queries can report a higher
  memory usage than in previous versions of ArangoDB. This is not because the
  queries use more memory than before, but because the memory usage tracking has
  been improved.