@@ -1,6 +1,9 @@
 v3.7.6 (XXXX-XX-XX)
 -------------------
 
+* When querying the list of currently running or slow AQL queries, ignore
+  not-yet created databases on other coordinators.
+
 * Fix AQL cost estimate of spliced subqueries which could lead to overly large
   numbers in the explain output of such queries.
 
